Migrated to IntelliJ and junit 5